--- a/Docker_Basics.ipynb
+++ b/Docker_Basics.ipynb
@@ -1948,19 +1948,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "A `Vagrantfile` has been placed in this directory. You are now\r\n",
-      "ready to `vagrant up` your first virtual environment! Please read\r\n",
-      "the comments in the Vagrantfile as well as documentation on\r\n",
-      "`vagrantup.com` for more information on using Vagrant.\r\n"
+      "`Vagrantfile` already exists in this directory. Remove it before\r\n",
+      "running `vagrant init`.\r\n"
      ]
     }
    ],
@@ -2067,7 +2065,8 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2173,7 +2172,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "vagrant ssh"
+    "#### workflow: \n",
+    "    \n",
+    "    1. use box add to give vagrant an image (xxx.box) and give it a tag name, e.g. ubuntu/trusty64\n",
+    "    2. vagrant init ubuntu/trusty64 (will create the file Vagrantfile)\n",
+    "    3. vagrant up  (set-up the guest node according to the Vagrantfile and then turn on the guest node)\n",
+    "    4. vagrant ssh (login to the guest node)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I was trying to find the folder which contains motd(message of the day) settings. This is done by using the forgotten \"find\" command:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "vagrant@vagrant-ubuntu-trusty-64:~$ sudo find / -type d -name \"*motd*\"\n",
+    "/etc/update-motd.d\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "check the file system and the harddisk:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "root@vagrant-ubuntu-trusty-64:/vagrant# fdisk -l\n",
+    "\n",
+    "Disk /dev/sda: 42.9 GB, 42949672960 bytes\n",
+    "4 heads, 32 sectors/track, 655360 cylinders, total 83886080 sectors\n",
+    "Units = sectors of 1 * 512 = 512 bytes\n",
+    "Sector size (logical/physical): 512 bytes / 512 bytes\n",
+    "I/O size (minimum/optimal): 512 bytes / 512 bytes\n",
+    "Disk identifier: 0x00021928\n",
+    "\n",
+    "   Device Boot      Start         End      Blocks   Id  System\n",
+    "/dev/sda1   *        2048    83886079    41942016   83  Linux\n",
+    "root@vagrant-ubuntu-trusty-64:/vagrant# df -h\n",
+    "Filesystem      Size  Used Avail Use% Mounted on\n",
+    "udev            241M   12K  241M   1% /dev\n",
+    "tmpfs            49M  344K   49M   1% /run\n",
+    "/dev/sda1        40G  1.4G   37G   4% /\n",
+    "none            4.0K     0  4.0K   0% /sys/fs/cgroup\n",
+    "none            5.0M     0  5.0M   0% /run/lock\n",
+    "none            245M     0  245M   0% /run/shm\n",
+    "none            100M     0  100M   0% /run/user\n",
+    "vagrant         201G  124G   77G  62% /vagrant\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Indeed, the mounted mount point /vagrant is the directory that is shared in between the host and the guest."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remark: use hostnamectl to modify the host name when necessary. I am not going to do this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "cd ~/hadoop_base\n",
+    "vagrant up"
    ]
   },
   {
@@ -2190,6 +2274,173 @@
    },
    "source": [
     "https://blog.dominodatalab.com/lesser-known-ways-of-using-notebooks/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==> base: Clearing any previously set forwarded ports...\r\n",
+      "==> base: Exporting VM...\r\n",
+      "\r",
+      "\u001b[K==> base: Compressing package to: C:/Users/Student/hadoop_base/hadoop_base.box\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cd ~/hadoop_base\n",
+    "vagrant package --output hadoop_base.box"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==> box: Box file was not detected as metadata. Adding it directly...\r\n",
+      "==> box: Adding box 'iiiedu/hadoop_base' (v0) for provider: \r\n",
+      "    box: Unpacking necessary files from: file://C:/Users/Student/hadoop_base/hadoop_base.box\r\n",
+      "\r",
+      "\u001b[K    box: Progress: 0% (Rate: 0/s, Estimated time remaining: --:--:--)\r",
+      "\u001b[K    box: Progress: 0% (Rate: 5333k/s, Estimated time remaining: 0:01:28)\r",
+      "\u001b[K    box: Progress: 26% (Rate: 120M/s, Estimated time remaining: 0:00:03)\r",
+      "\u001b[K    box: Progress: 51% (Rate: 117M/s, Estimated time remaining: 0:00:02)\r",
+      "\u001b[K    box: Progress: 74% (Rate: 114M/s, Estimated time remaining: 0:00:01)\r",
+      "\u001b[K    box: Progress: 99% (Rate: 113M/s, Estimated time remaining: --:--:--)\r",
+      "\u001b[K    box: Progress: 100% (Rate: 92.6M/s, Estimated time remaining: --:--:--)\r",
+      "\u001b[K    box: \r\n",
+      "==> box: Successfully added box 'iiiedu/hadoop_base' (v0) for 'virtualbox'!\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cd ~/hadoop_base\n",
+    "vagrant box add iiiedu/hadoop_base hadoop_base.box"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iiiedu/hadoop_base (virtualbox, 0)\r\n",
+      "iiiedu/trusty64    (virtualbox, 0)\r\n",
+      "iiiedu/xenial64    (virtualbox, 0)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "vagrant box list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A `Vagrantfile` has been placed in this directory. You are now\r\n",
+      "ready to `vagrant up` your first virtual environment! Please read\r\n",
+      "the comments in the Vagrantfile as well as documentation on\r\n",
+      "`vagrantup.com` for more information on using Vagrant.\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cd ~/\n",
+    "mkdir hadoop_node\n",
+    "cd hadoop_node\n",
+    "vagrant init iiiedu/hadoop_base "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bringing machine 'node' up with 'virtualbox' provider...\r\n",
+      "==> node: Importing base box 'iiiedu/hadoop_base'...\r\n",
+      "\r",
+      "\u001b[KProgress: 90%\r",
+      "\u001b[K==> node: Matching MAC address for NAT networking...\r\n",
+      "==> node: Setting the name of the VM: node\r\n",
+      "==> node: Fixed port collision for 22 => 2222. Now on port 2200.\r\n",
+      "==> node: Clearing any previously set network interfaces...\r\n",
+      "==> node: Preparing network interfaces based on configuration...\r\n",
+      "    node: Adapter 1: nat\r\n",
+      "==> node: Forwarding ports...\r\n",
+      "    node: 22 (guest) => 2200 (host) (adapter 1)\r\n",
+      "==> node: Running 'pre-boot' VM customizations...\r\n",
+      "==> node: Booting VM...\r\n",
+      "==> node: Waiting for machine to boot. This may take a few minutes...\r\n",
+      "    node: SSH address: 127.0.0.1:2200\r\n",
+      "    node: SSH username: vagrant\r\n",
+      "    node: SSH auth method: private key\r\n",
+      "==> node: Machine booted and ready!\r\n",
+      "[node] GuestAdditions 5.1.10 running --- OK.\r\n",
+      "==> node: Checking for guest additions in VM...\r\n",
+      "==> node: Setting hostname...\r\n",
+      "==> node: Mounting shared folders...\r\n",
+      "    node: /vagrant => C:/Users/Student/hadoop_node\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cd ~/hadoop_node\n",
+    "vagrant up"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "cd ~/hadoop_cluster\n",
+    "vagrant package master --output master.box\n",
+    "vagrant package slave1 --output slave1.box\n",
+    "vagrant package slave2 --output slave2.box\n",
+    "vagrant package slave3 --output slave3.box\n",
+    "vagrant package slave4 --output slave4.box\n",
+    "vagrant package slave5 --output slave5.box"
    ]
   },
   {
