--- a/Hadoop_Basics.ipynb
+++ b/Hadoop_Basics.ipynb
@@ -424,6 +424,221 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 02122016"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## short exam:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### initialization the cluster a:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "#!/bin/bash\n",
+    "yes yes|dkcreate a && dkstart a && yes yes|formathdfs a jeff && starthdfs a && startyarn a\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### add users and set up the permission of the home directory of the users properly:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "#!/bin/bash\n",
+    "ssh nna 'sudo groupadd bigboss'\n",
+    "ssh nna 'sudo useradd dsa00'\n",
+    "ssh nna 'sudo useradd dsa01'\n",
+    "ssh nna 'sudo usermod -aG bigboss dsa00'\n",
+    "ssh nna 'sudo usermod -aG bigboss dsa01'\n",
+    "\n",
+    "hdfs dfs -mkdir -p /user/dsa00\n",
+    "hdfs dfs -mkdir -p /user/dsa01\n",
+    "\n",
+    "hdfs dfs -chown dsa00:bigboss /user/dsa00\n",
+    "hdfs dfs -chown dsa01:bigboss /user/dsa01\n",
+    "hdfs dfs -chmod 770 /user/dsa00\n",
+    "hdfs dfs -chmod 770 /user/dsa01\n",
+    "hdfs dfs -chmod -R 777 /tmp/\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### stop and remove the cluster a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "#!/bin/bash\n",
+    "stopyarn a && stophdfs a && dkstop a && yes yes|dkremove a\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "## entering into pig\n",
+    "a= load 'school.txt';\n",
+    "b = foreach a generate $0,$1;\n",
+    "c = filter b by $0 is not null;\n",
+    "dump c;\n",
+    "store c into 'abc.csv';\n",
+    "## now, exiting pig\n",
+    "hdfs dfs -getmerge abc.csv abc.txt\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Yarn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "bigred@CVBG:~/wk$ startyarn a\n",
+    "Cluster Type = small\n",
+    "starting resourcemanager, logging to /tmp/yarn-bigred-resourcemanager-rma.out\n",
+    "starting historyserver, logging to /home/bigred/jhslog/mapred-bigred-historyserver-rma.out\n",
+    "starting nodemanager, logging to /tmp/yarn-bigred-nodemanager-wka01.out\n",
+    "starting nodemanager, logging to /tmp/yarn-bigred-nodemanager-wka02.out\n",
+    "bigred@CVBG:~/wk$ ssh rma jps  // go to the resource manager and \n",
+    "225 JobHistoryServer\n",
+    "151 ResourceManager\n",
+    "490 Jps\n",
+    "bigred@CVBG:~/wk$ yarn node -list -all\n",
+    "16/12/02 13:51:41 INFO client.RMProxy: Connecting to ResourceManager at rma/172.17.6.12:8032\n",
+    "16/12/02 13:51:41 WARN util.NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+    "Total Nodes:2\n",
+    "         Node-Id\t     Node-State\tNode-Http-Address\tNumber-of-Running-Containers\n",
+    "     wka01:32886\t        RUNNING\t       wka01:8042\t                           0\n",
+    "     wka02:42447\t        RUNNING\t       wka02:8042\t\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### run a test example:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "hadoop jar /opt/hadoop-2.7.3/share/hadoop/mapreduce/hadoop-mapreduce-examples-2.7.3.jar pi 2 1000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "dsa01@cla01:~$ pig 2> /dev/null\n",
+    "grunt> pwd\n",
+    "hdfs://nna:8020/user/dsa01\n",
+    "grunt> ls\n",
+    "hdfs://nna:8020/user/dsa01/QuasiMonteCarlo_1480660609872_1406370602\t<dir>\n",
+    "hdfs://nna:8020/user/dsa01/a1<r 2>\t0\n",
+    "hdfs://nna:8020/user/dsa01/a2<r 2>\t0\n",
+    "hdfs://nna:8020/user/dsa01/school.txt<r 2>\t20807\n",
+    "hdfs://nna:8020/user/dsa01/temp\t<dir>\n",
+    "hdfs://nna:8020/user/dsa01/testtest\t<dir>\n",
+    "grunt> mkdir test\n",
+    "grunt> \\rm -r test\n",
+    "grunt> ls\n",
+    "hdfs://nna:8020/user/dsa01/QuasiMonteCarlo_1480660609872_1406370602\t<dir>\n",
+    "hdfs://nna:8020/user/dsa01/a1<r 2>\t0\n",
+    "hdfs://nna:8020/user/dsa01/a2<r 2>\t0\n",
+    "hdfs://nna:8020/user/dsa01/school.txt<r 2>\t20807\n",
+    "hdfs://nna:8020/user/dsa01/temp\t<dir>\n",
+    "hdfs://nna:8020/user/dsa01/test\t<dir>\n",
+    "hdfs://nna:8020/user/dsa01/testtest\t<dir>\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "grunt> a= load 'school.txt';\n",
+    "grunt> b = foreach a generate $0,$1;\n",
+    "grunt> c = filter b by $0 is not null;\n",
+    "grunt> dump c;\n",
+    "grunt> store c into 'abc.csv';\n",
+    "\n",
+    "$hdfs dfs -getmerge abc.csv abc.txt\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
