--- a/test.ipynb
+++ b/test.ipynb
@@ -145,67 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "semantic01: 10146 QuorumPeerMain 11107 DataNode 11269 JournalNode 14281 Jps 11455 DFSZKFailoverController ==================== semantic02: 11430 Jps 10015 DataNode ==================== semantic03: 10802 QuorumPeerMain 12423 DFSZKFailoverController 11897 NameNode 12187 JournalNode 13804 Jps ==================== semantic04: 9499 Jps 8366 DataNode ==================== semantic05: 9728 DataNode 9890 JournalNode 8920 QuorumPeerMain 11214 Jps ==================== semantic06: 9302 Jps 8190 DataNode ==================== semantic07: 9408 Jps 8282 DataNode ==================== semantic08: 8340 DataNode 9578 Jps ==================== semantic09: 9637 Jps 8524 DataNode ==================== semantic10: 9317 Jps 8028 DataNode ==================== semantic11: 8661 DataNode 9848 Jps ==================== semantic12: 10115 Jps 9003 DataNode ==================== \n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['semantic01: 10146 QuorumPeerMain 11107 DataNode 11269 JournalNode 14281 Jps 11455 DFSZKFailoverController ',\n",
-       " ' semantic02: 11430 Jps 10015 DataNode ',\n",
-       " ' semantic03: 10802 QuorumPeerMain 12423 DFSZKFailoverController 11897 NameNode 12187 JournalNode 13804 Jps ',\n",
-       " ' semantic04: 9499 Jps 8366 DataNode ',\n",
-       " ' semantic05: 9728 DataNode 9890 JournalNode 8920 QuorumPeerMain 11214 Jps ',\n",
-       " ' semantic06: 9302 Jps 8190 DataNode ',\n",
-       " ' semantic07: 9408 Jps 8282 DataNode ',\n",
-       " ' semantic08: 8340 DataNode 9578 Jps ',\n",
-       " ' semantic09: 9637 Jps 8524 DataNode ',\n",
-       " ' semantic10: 9317 Jps 8028 DataNode ',\n",
-       " ' semantic11: 8661 DataNode 9848 Jps ',\n",
-       " ' semantic12: 10115 Jps 9003 DataNode ',\n",
-       " ' ']"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -289,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 66,
    "metadata": {
     "collapsed": true
    },
@@ -299,15 +239,18 @@
     "    print serviceName+\" enabled at:\"\n",
     "    for line in file:\n",
     "        if serviceName in line:\n",
-    "            cutL=len(serviceName)+line.index(serviceName)+1\n",
-    "            cutR=cutL+5\n",
+    "            #print \"\\t\"+line\n",
+    "            #print \"\\t\"+line[:11]\n",
+    "            cutL=line.index(serviceName)-6\n",
+    "            cutR=cutL+6\n",
     "            print \"\\t\"+line[:11],line[cutL:cutR]\n",
-    "            print \"\\t\"+line"
+    "            #print \"\\t\"+line[:11],line[cutL:cutR]\n",
+    "            #print \"\\t\"+line"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -316,97 +259,74 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[' semantic01: 10146 QuorumPeerMain 11107 DataNode 14965 NodeManager 11269 JournalNode 20182 NameNode 4091 Jps 11455 DFSZKFailoverController ', ' semantic02: 14032 ResourceManager 12289 NodeManager 29069 Jps 10015 DataNode ', ' semantic03: 10802 QuorumPeerMain 12423 DFSZKFailoverController 11897 NameNode 12187 JournalNode 20527 Jps ', ' semantic04: 30274 Jps 10156 NodeManager 8366 DataNode ', ' semantic05: 9728 DataNode 30801 Jps 9890 JournalNode 11894 NodeManager 8920 QuorumPeerMain 12313 ResourceManager ', ' semantic06: 9955 NodeManager 8190 DataNode 27231 Jps ', ' semantic07: 10628 NodeManager 27781 Jps 8282 DataNode ', ' semantic08: 8340 DataNode 27737 Jps 10799 NodeManager ', ' semantic09: 10856 NodeManager 8524 DataNode 26988 Jps ', ' semantic10: 26145 RunJar 10532 NodeManager 25401 NetworkServerControl 28234 Jps 8028 DataNode ', ' semantic11: 8661 DataNode 733 Jps 30766 NetworkServerControl 11103 NodeManager ', ' semantic12: 11937 JobHistoryServer 11362 NodeManager 27531 Jps 9003 DataNode ', ' ']\n",
+      "\n",
+      "\n",
       "NameNode enabled at:\n",
-      "\tsemantic01: 4091 \n",
-      "\tsemantic01: 10146 QuorumPeerMain 11107 DataNode 14965 NodeManager 11269 JournalNode 20182 NameNode 4091 Jps 11455 DFSZKFailoverController \n",
-      "\t semantic03 12187\n",
-      "\t semantic03: 10802 QuorumPeerMain 12423 DFSZKFailoverController 11897 NameNode 12187 JournalNode 20527 Jps \n",
-      "DFSZKFailoverController enabled at:\n",
-      "\tsemantic01: \n",
-      "\tsemantic01: 10146 QuorumPeerMain 11107 DataNode 14965 NodeManager 11269 JournalNode 20182 NameNode 4091 Jps 11455 DFSZKFailoverController \n",
-      "\t semantic03 11897\n",
-      "\t semantic03: 10802 QuorumPeerMain 12423 DFSZKFailoverController 11897 NameNode 12187 JournalNode 20527 Jps \n",
+      "\t semantic01 20182 \n",
+      "\t semantic03 11897 \n",
       "DataNode enabled at:\n",
-      "\tsemantic01: 14965\n",
-      "\tsemantic01: 10146 QuorumPeerMain 11107 DataNode 14965 NodeManager 11269 JournalNode 20182 NameNode 4091 Jps 11455 DFSZKFailoverController \n",
-      "\t semantic02 \n",
-      "\t semantic02: 14032 ResourceManager 12289 NodeManager 29069 Jps 10015 DataNode \n",
-      "\t semantic04 \n",
-      "\t semantic04: 30274 Jps 10156 NodeManager 8366 DataNode \n",
-      "\t semantic05 30801\n",
-      "\t semantic05: 9728 DataNode 30801 Jps 9890 JournalNode 11894 NodeManager 8920 QuorumPeerMain 12313 ResourceManager \n",
-      "\t semantic06 27231\n",
-      "\t semantic06: 9955 NodeManager 8190 DataNode 27231 Jps \n",
-      "\t semantic07 \n",
-      "\t semantic07: 10628 NodeManager 27781 Jps 8282 DataNode \n",
-      "\t semantic08 27737\n",
-      "\t semantic08: 8340 DataNode 27737 Jps 10799 NodeManager \n",
-      "\t semantic09 26988\n",
-      "\t semantic09: 10856 NodeManager 8524 DataNode 26988 Jps \n",
-      "\t semantic10 \n",
-      "\t semantic10: 26145 RunJar 10532 NodeManager 25401 NetworkServerControl 28234 Jps 8028 DataNode \n",
-      "\t semantic11 733 J\n",
-      "\t semantic11: 8661 DataNode 733 Jps 30766 NetworkServerControl 11103 NodeManager \n",
-      "\t semantic12 \n",
-      "\t semantic12: 11937 JobHistoryServer 11362 NodeManager 27531 Jps 9003 DataNode \n",
-      "QuorumPeerMain enabled at:\n",
-      "\tsemantic01: 11107\n",
-      "\tsemantic01: 10146 QuorumPeerMain 11107 DataNode 14965 NodeManager 11269 JournalNode 20182 NameNode 4091 Jps 11455 DFSZKFailoverController \n",
-      "\t semantic03 12423\n",
-      "\t semantic03: 10802 QuorumPeerMain 12423 DFSZKFailoverController 11897 NameNode 12187 JournalNode 20527 Jps \n",
-      "\t semantic05 12313\n",
-      "\t semantic05: 9728 DataNode 30801 Jps 9890 JournalNode 11894 NodeManager 8920 QuorumPeerMain 12313 ResourceManager \n",
-      "JournalNode enabled at:\n",
-      "\tsemantic01: 20182\n",
-      "\tsemantic01: 10146 QuorumPeerMain 11107 DataNode 14965 NodeManager 11269 JournalNode 20182 NameNode 4091 Jps 11455 DFSZKFailoverController \n",
-      "\t semantic03 20527\n",
-      "\t semantic03: 10802 QuorumPeerMain 12423 DFSZKFailoverController 11897 NameNode 12187 JournalNode 20527 Jps \n",
-      "\t semantic05 11894\n",
-      "\t semantic05: 9728 DataNode 30801 Jps 9890 JournalNode 11894 NodeManager 8920 QuorumPeerMain 12313 ResourceManager \n",
+      "\t semantic01 11107 \n",
+      "\t semantic02 10015 \n",
+      "\t semantic04  8366 \n",
+      "\t semantic05  9728 \n",
+      "\t semantic06  8190 \n",
+      "\t semantic07  8282 \n",
+      "\t semantic08  8340 \n",
+      "\t semantic09  8524 \n",
+      "\t semantic10  8028 \n",
+      "\t semantic11  8661 \n",
+      "\t semantic12  9003 \n",
       "NodeManager enabled at:\n",
-      "\tsemantic01: 11269\n",
-      "\tsemantic01: 10146 QuorumPeerMain 11107 DataNode 14965 NodeManager 11269 JournalNode 20182 NameNode 4091 Jps 11455 DFSZKFailoverController \n",
-      "\t semantic02 29069\n",
-      "\t semantic02: 14032 ResourceManager 12289 NodeManager 29069 Jps 10015 DataNode \n",
-      "\t semantic04 8366 \n",
-      "\t semantic04: 30274 Jps 10156 NodeManager 8366 DataNode \n",
-      "\t semantic05 8920 \n",
-      "\t semantic05: 9728 DataNode 30801 Jps 9890 JournalNode 11894 NodeManager 8920 QuorumPeerMain 12313 ResourceManager \n",
-      "\t semantic06 8190 \n",
-      "\t semantic06: 9955 NodeManager 8190 DataNode 27231 Jps \n",
-      "\t semantic07 27781\n",
-      "\t semantic07: 10628 NodeManager 27781 Jps 8282 DataNode \n",
-      "\t semantic08 \n",
-      "\t semantic08: 8340 DataNode 27737 Jps 10799 NodeManager \n",
-      "\t semantic09 8524 \n",
-      "\t semantic09: 10856 NodeManager 8524 DataNode 26988 Jps \n",
-      "\t semantic10 25401\n",
-      "\t semantic10: 26145 RunJar 10532 NodeManager 25401 NetworkServerControl 28234 Jps 8028 DataNode \n",
-      "\t semantic11 \n",
-      "\t semantic11: 8661 DataNode 733 Jps 30766 NetworkServerControl 11103 NodeManager \n",
-      "\t semantic12 27531\n",
-      "\t semantic12: 11937 JobHistoryServer 11362 NodeManager 27531 Jps 9003 DataNode \n"
+      "\t semantic01 14965 \n",
+      "\t semantic02 12289 \n",
+      "\t semantic04 10156 \n",
+      "\t semantic05 11894 \n",
+      "\t semantic06  9955 \n",
+      "\t semantic07 10628 \n",
+      "\t semantic08 10799 \n",
+      "\t semantic09 10856 \n",
+      "\t semantic10 10532 \n",
+      "\t semantic11 11103 \n",
+      "\t semantic12 11362 \n",
+      "ResourceManager enabled at:\n",
+      "\t semantic02 14032 \n",
+      "\t semantic05 12313 \n",
+      "DFSZKFailoverController enabled at:\n",
+      "\t semantic01 11455 \n",
+      "\t semantic03 12423 \n",
+      "QuorumPeerMain enabled at:\n",
+      "\t semantic01 10146 \n",
+      "\t semantic03 10802 \n",
+      "\t semantic05  8920 \n",
+      "JournalNode enabled at:\n",
+      "\t semantic01 11269 \n",
+      "\t semantic03 12187 \n",
+      "\t semantic05  9890 \n"
      ]
     }
    ],
    "source": [
-    "msg_all=\"\"\n",
+    "msg_all=\" \"\n",
     "for line in msg:\n",
     "    msg_all+=line+\" \"\n",
     "#print msg_all\n",
     "\n",
     "info=msg_all.split(\"====================\")\n",
+    "print info\n",
+    "print \"\\n\"\n",
     "serviceCheck(\"NameNode\",info)\n",
-    "serviceCheck(\"DFSZKFailoverController\",info)\n",
     "serviceCheck(\"DataNode\",info)\n",
+    "serviceCheck(\"NodeManager\",info)\n",
+    "serviceCheck(\"ResourceManager\",info)\n",
+    "serviceCheck(\"DFSZKFailoverController\",info)\n",
     "serviceCheck(\"QuorumPeerMain\",info)\n",
-    "serviceCheck(\"JournalNode\",info)\n",
-    "serviceCheck(\"NodeManager\",info)"
+    "serviceCheck(\"JournalNode\",info)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -658,9 +578,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
